--- a/app/globals.css
+++ b/app/globals.css
@@ -2,32 +2,78 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
+@layer base {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --background: 0 0% 96.08%;
+    --foreground: 210 73% 4%;
+    --muted: 0 12% 90%;
+    --muted-foreground: 0 12% 30%;
+    --popover: 0 0% 97%;
+    --popover-foreground: 213 13% 6%;
+    --card: 0 0% 100%;
+    --card-foreground: 0 0% 0%;
+    --border: 0 0% 95%;
+    --input: 0 0% 92%;
+    --primary: 213 13% 16%;
+    --primary-foreground: 213 13% 76%;
+    --secondary: 213 3% 75%;
+    --secondary-foreground: 213 3% 15%;
+    --accent: 0 0% 85%;
+    --accent-foreground: 0 0% 25%;
+    --destructive: 8 86% 40%;
+    --destructive-foreground: 0 0% 100%;
+    --ring: 213 13% 16%;
+    --radius: 0.5rem;
+    /* New custom color */
+    --custom-gold: 35 45% 57%;
+  }
+
+  .dark {
+    --background: 220 13% 18%;
+    --foreground: 219 14% 71%;
+    --muted: 220 12% 22%;
+    --muted-foreground: 220 12% 72%;
+    --popover: 220 13% 15%;
+    --popover-foreground: 219 14% 81%;
+    --card: 220 13% 16%;
+    --card-foreground: 219 14% 76%;
+    --border: 220 3% 23%;
+    --input: 220 3% 26%;
+    --primary: 220 13% 86%;
+    --primary-foreground: 220 13% 26%;
+    --secondary: 220 3% 25%;
+    --secondary-foreground: 220 3% 85%;
+    --accent: 220 13% 33%;
+    --accent-foreground: 220 13% 93%;
+    --destructive: 3 89% 50%;
+    --destructive-foreground: 0 0% 100%;
+    --ring: 220 13% 86%;
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+@layer base {
+  * {
+    @apply border-border;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
 }
 
 @layer utilities {
-  .text-balance {
-    text-wrap: balance;
+  /* Border */
+  .card-wrapper {
+    @apply relative rounded-xl overflow-hidden;
+  }
+
+  /* Gradient */
+  .card-wrapper::before {
+    background: conic-gradient(rgb(14, 165, 233, 0.6) 0deg, rgb(14, 165, 233, 0.6) 0deg, transparent 80deg);
+    @apply absolute h-[200%] w-[200%] left-[-50%] top-[-50%] content-[''] animate-border-spin;
+  }
+
+  /* Body */
+  .card-content {
+    @apply absolute w-[calc(100%-2px)] h-[calc(100%-2px)] top-[1px] left-[1px] rounded-xl;
   }
 }
